Moved GUI specific stuff out of GuiMain.

--- a/bling.cabal
+++ b/bling.cabal
@@ -30,6 +30,7 @@ Library
       primitive         == 0.4.*,
       random            == 1.0.*,
       random-shuffle    == 0.0.*,
+      SDL               >= 0.6,
       transformers      == 0.3.*,
       Vec               == 1.0.*,
       vector            == 0.9.*,
@@ -46,6 +47,7 @@ Library
       Graphics.Bling.Camera,
       Graphics.Bling.DifferentialGeometry,
       Graphics.Bling.Filter,
+      Graphics.Bling.Gui,
       Graphics.Bling.Image,
       Graphics.Bling.Integrator,
       Graphics.Bling.Light,
