--- a/bling.cabal
+++ b/bling.cabal
@@ -46,6 +46,7 @@ Library
       Graphics.Bling.AABB,
       Graphics.Bling.Camera,
       Graphics.Bling.DifferentialGeometry,
+      Graphics.Bling.Edsl,
       Graphics.Bling.Filter,
       Graphics.Bling.Gui,
       Graphics.Bling.Image,
