--- a/bling.cabal
+++ b/bling.cabal
@@ -24,6 +24,7 @@ Library
       containers        >= 0.4,
       deepseq           >= 1.1,
       filepath          >= 1.2,
+      JuicyPixels       >= 1.3,
       mtl               >= 2.0,
       mwc-random        >= 0.10,
       parsec            >= 3.1,
