Started adding a kd-tree for faster hitpoint lookups in SPPM.

--- a/bling.cabal
+++ b/bling.cabal
@@ -52,6 +52,7 @@ Library
       Graphics.Bling.Gui,
       Graphics.Bling.Image,
       Graphics.Bling.Integrator,
+      Graphics.Bling.KdTree,
       Graphics.Bling.Light,
       Graphics.Bling.Math,
       Graphics.Bling.Montecarlo,
