--- a/bling.cabal
+++ b/bling.cabal
@@ -31,7 +31,7 @@ Library
       parallel          >= 3.1,
       pretty            >= 1.0,
       primitive         >= 0.4,
-      random            >= 1.0,
+--      random            >= 1.0,
       SDL               >= 0.6,
       transformers      >= 0.2,
       vector            >= 0.9,
