--- a/bling.cabal
+++ b/bling.cabal
@@ -63,7 +63,6 @@ Library
       Graphics.Bling.Integrator.Debug,
       Graphics.Bling.Integrator.DirectLighting,
       Graphics.Bling.Integrator.LightTracer,
-      Graphics.Bling.Integrator.Metropolis,
       Graphics.Bling.Integrator.Path,
       Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
@@ -84,6 +83,7 @@ Library
       Graphics.Bling.Primitive.Geometry,
       Graphics.Bling.Primitive.KdTree,
       Graphics.Bling.Primitive.TriangleMesh,
+      Graphics.Bling.Renderer.Metropolis,
       Graphics.Bling.Renderer.SPPM,
       Graphics.Bling.Utils
       
