Brought back specular reflection.

--- a/bling.cabal
+++ b/bling.cabal
@@ -85,6 +85,7 @@ Library
       Graphics.Bling.Primitive.TriangleMesh,
       Graphics.Bling.Reflection,
       Graphics.Bling.Reflection.Diffuse,
+      Graphics.Bling.Reflection.Specular,
       Graphics.Bling.Renderer.Metropolis,
       Graphics.Bling.Renderer.SPPM,
       Graphics.Bling.Utils
