--- a/bling.cabal
+++ b/bling.cabal
@@ -33,7 +33,7 @@ Library
       vector-algorithms >= 0.5
       
    Ghc-Options:
-      -Wall -O2 -fexcess-precision
+      -Wall -O2 -fexcess-precision -fllvm
 
    Exposed-Modules:
       Graphics.Bling.AABB,
@@ -49,7 +49,6 @@ Library
       Graphics.Bling.Montecarlo,
       Graphics.Bling.Primitive,
       Graphics.Bling.Random,
-
       Graphics.Bling.Rendering,
       Graphics.Bling.Sampling,
       Graphics.Bling.Scene,
