--- a/bling.cabal
+++ b/bling.cabal
@@ -62,7 +62,6 @@ Library
       Graphics.Bling.Integrator.BidirPath,
       Graphics.Bling.Integrator.Debug,
       Graphics.Bling.Integrator.DirectLighting,
-      Graphics.Bling.Integrator.LightTracer,
       Graphics.Bling.Integrator.Path,
       Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
@@ -87,6 +86,7 @@ Library
       Graphics.Bling.Reflection.Diffuse,
       Graphics.Bling.Reflection.Microfacet,
       Graphics.Bling.Reflection.Specular,
+      Graphics.Bling.Renderer.LightTracer,
       Graphics.Bling.Renderer.Metropolis,
       Graphics.Bling.Renderer.SPPM,
       Graphics.Bling.Utils
