Using a LUT for pixel filtering, gives acceptable performance.

--- a/bling.cabal
+++ b/bling.cabal
@@ -40,6 +40,7 @@ Library
       Graphics.Bling.Camera,
       Graphics.Bling.DifferentialGeometry,
       Graphics.Bling.Edsl,
+      Graphics.Bling.Filter,
       Graphics.Bling.Fresnel,
       Graphics.Bling.Gui,
       Graphics.Bling.Image,
