Use JuicyPixels for RGBE and PNG image I/O, ditch homebrew RGBE and PPM I/O.

--- a/bling.cabal
+++ b/bling.cabal
@@ -62,6 +62,7 @@ Library
       Graphics.Bling.Integrator.Debug,
       Graphics.Bling.Integrator.DirectLighting,
       Graphics.Bling.Integrator.Path,
+      Graphics.Bling.IO.Bitmap,
       Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
       Graphics.Bling.IO.LightParser,
@@ -71,7 +72,6 @@ Library
       Graphics.Bling.IO.Progress,
       Graphics.Bling.IO.RenderJob,
       Graphics.Bling.IO.RendererParser,
-      Graphics.Bling.IO.RGBE,
       Graphics.Bling.IO.TransformParser,
       Graphics.Bling.IO.WaveFront,
       Graphics.Bling.Material,
