Start working on a rendering DSL.

--- a/bling.cabal
+++ b/bling.cabal
@@ -37,6 +37,7 @@ Library
       -fexcess-precision
       
    Exposed-Modules:
+      Graphics.Bling,
       Graphics.Bling.AABB,
       Graphics.Bling.Camera,
       Graphics.Bling.DifferentialGeometry,
